Fix z-index of paragraph settings and progressbar

--- a/zeppelin-web/src/app/notebook/notebook.css
+++ b/zeppelin-web/src/app/notebook/notebook.css
@@ -83,7 +83,7 @@
   top: 50px;
   width: 100%;
   height: 54px;
-  z-index: 3;
+  z-index: 1030;
 }
 
 .noteAction h3 {
